@@ -14,6 +14,7 @@ unburden-home-dir (0.3.3) UNRELEASED; urgency=medium
     + Use File::Temp and String::Random instead of manually setting test
       directories. Add libstring-random-perl as build-dependency.
     + Enable DEP8 installed-time testing with autopkgtest.
+    + Ignore lsof warnings caused by systemd.
   * New tests covering…
     + lsof checks
     + a lots of internal error handling
